@@ -3,7 +3,6 @@ package Lev_28_lec_2_3;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 
 /*
@@ -16,11 +15,12 @@ public class Solution {
         SearchFileVisitor searchFileVisitor = new SearchFileVisitor();
 
         searchFileVisitor.setPartOfName("");
-        searchFileVisitor.setPartOfContent("");
+        searchFileVisitor.setPartOfContent("Bob");
         searchFileVisitor.setMinSize(0);
         searchFileVisitor.setMaxSize(0);
 
-        Files.walkFileTree(Paths.get("C:\\Users\\Администратор\\Desktop\\Java\\1"), searchFileVisitor);
+        Path path = Path.of("C:\\Users\\Администратор\\Desktop\\Java\\1");
+        Files.walkFileTree(path, searchFileVisitor);
 
         List<Path> foundFiles = searchFileVisitor.getFoundFiles();
         for (Path file : foundFiles) {
